--- a/climateuncertaintyspilloverbook/climate.bib
+++ b/climateuncertaintyspilloverbook/climate.bib
@@ -160,10 +160,11 @@
 	volume = {375},
 	year = {2020}}
 
-@article{IPCC:2019,
+@inproceedings{IPCC:2019,
 	author = {Allen, M and Antwi-Agyei, P and Aragon-Durand, F and Babiker, M and Bertoldi, P and Bind, M and Brown, S and Buckeridge, M and Camilloni, I and Cartwright, A and others},
 	publisher = {Intergovernmental Panel on Climate Change},
-	title = {Technical Summary: Global warming of 1.5$\,^{\circ}$ C. An IPCC Special Report on the impacts of global warming of 1.5$\,^{\circ}$ C above pre-industrial levels and related global greenhouse gas emission pathways, in the context of strengthening the global response to the threat of climate change, sustainable development, and efforts to eradicate poverty},
+	title = {Technical Summary: Global warming of 1.5° C. An IPCC Special Report on the impacts of global warming of 1.5° C above pre-industrial levels and related global greenhouse gas emission pathways, in the context of strengthening the global response to the threat of climate change, sustainable development, and efforts to eradicate poverty},
+	booktitle = {Intergovernmental Panel on Climate Change},
 	year = {2019}}
 
 @inproceedings{Risingetal:2020,
@@ -749,6 +750,7 @@
 	author = {Dietz, Simon and van der Ploeg, Rick and Rezai, Armon and Venmans, Frank},
 	publisher = {CESifo Working Paper},
 	title = {Are economists getting climate dynamics right and does it matter?},
+	journal = {Journal of the Association of Environmental and Resource Economists},
 	year = {2020}}
 
 @article{Seshadri:2017,
@@ -1278,7 +1280,7 @@
 	year = {2015},
 	Bdsk-Url-1 = {https://doi.org/10.1257/aer.15000001}}
 
-@unpublished{BrockHansen:2017,
+@inproceedings{BrockHansen:2017,
 	abstract = {This paper uses insights from decision theory under uncertainty to explore research challenges in climate economics. We embrace a broad perspective of uncertainty with three components: risk (probabilities assigned by a given model), ambiguity (level of confidence in alternative models), and misspecification (potential shortfalls in existing models). We survey recent climate science research that exposes the uncertainty in climate dynamics that is pertinent in economic analyses and relevant for using models to provide policy guidance. The uncertainty components and their implications for decision theory help us frame this evidence and expose the modeling and evidential challenges.},
 	author = {Brock, William A. and Hansen, Lars Peter},
 	booktitle = {SSRN},
