--- a/climateuncertaintyspilloverbook/sec6_IllustrativeEconIII.ipynb
+++ b/climateuncertaintyspilloverbook/sec6_IllustrativeEconIII.ipynb
@@ -8,12 +8,7 @@
     "\n",
     "While the model posed in section [4](sec4_IllustrativeEconI.ipynb) illustrated how the unfolding of damages should alter policy, the economic model was not designed to confront transitions to fully carbon-neutral economies.  There have been several calls for such transitions with little regard for the role or impact of uncertainty.  We now modify the model to allow for green technology in decades to come.  \n",
     "\n",
-    "We next consider a technology that is close to the Dynamic Integrated Climate-Economy (DICE) model  of {cite:t}`Nordhaus:2017`. See also {cite:t}`CaiJuddLontzek:2017` and {cite:t}`CaiLontzek:2019` for a stochastic extension (DSICE)  of the DICE model.\n",
-    "\n",
-    "```{note}\n",
-    ":class: dropdown\n",
-    "Among other stochastic components, the DSICE incorporates tipping elements and characterizes the SCC as a stochastic process. From a decision theory perspective, DSICE focuses on risk aversion and intertemporal substitution under an assumption of rational expectations.\n",
-    "```\n",
+    "We next consider a technology that is close to the Dynamic Integrated Climate-Economy (DICE) model  of {cite:t}`Nordhaus:2017`. See also {cite:t}`CaiJuddLontzek:2017` and {cite:t}`CaiLontzek:2019` for a stochastic extension (DSICE)  of the DICE model. [^ref3]\n",
     "\n",
     "For our setting, we alter the output equation from our previous specification as follows:\n",
     "\n",
@@ -39,28 +34,14 @@
     "\n",
     "where $0 \\le \\iota_t \\le 1$ is *abatement*  at date $t$. The exogenously specified \n",
     "process $\\lambda$ gives the emissions to output ratio in the absence of  any abatement.  \n",
+    "\n",
     "By investing in $\\iota_t$,  this ratio can be reduced, but there is a corresponding reduction in output.  Specifically, the output loss is given by:\n",
     "\n",
     "$$\n",
     "J_t  = \\alpha K_t \\vartheta (\\iota_t)^\\theta \n",
     "$$\n",
     "\n",
-    "Equation (12) follows by solving for abatement $\\iota_t$ in terms of emissions.\n",
-    "\n",
-    "```{note}\n",
-    ":class: dropdown\n",
-    "The link to the specification used in {cite:t}`CaiLontzek:2019` is then:\n",
-    "\n",
-    "$$\n",
-    "\\begin{align*}\n",
-    "\\sigma_t & = \\lambda_t \\cr\n",
-    "\\vartheta_t & = \\theta_{\n",
-    "1,t} \\cr\n",
-    "\\theta & = \\theta_2 \\cr\n",
-    "\\mu_t & = \\iota_t \n",
-    "\\end{align*}\n",
-    "$$\n",
-    "```\n",
+    "Equation (12) follows by solving for abatement $\\iota_t$ in terms of emissions. [^ref4]\n",
     "\n",
     "The planner's preferences are logarithmic over damaged consumption:\n",
     "\n",
@@ -70,6 +51,18 @@
     "\n",
     "In contrast to the previous specification, the planner's value function for this model is no longer additively separable in $(y,k)$, although it remains additively separable in log damages, $n$. \n",
     " \n",
+    "[^ref3]: Among other stochastic components, the DSICE incorporates tipping elements and characterizes the SCC as a stochastic process. From a decision theory perspective, DSICE focuses on risk aversion and intertemporal substitution under an assumption of rational expectations.\n",
+    "\n",
+    "[^ref4]: The link to the specification used in {cite:t}`CaiLontzek:2019` is then:\n",
+    "$\n",
+    "\\begin{align*}\n",
+    "\\sigma_t & = \\lambda_t \\cr\n",
+    "\\vartheta_t & = \\theta_{\n",
+    "1,t} \\cr\n",
+    "\\theta & = \\theta_2 \\cr\n",
+    "\\mu_t & = \\iota_t \n",
+    "\\end{align*}\n",
+    "$\n",
     "\n",
     "\n",
     "## HJB, post damage jump value functions\n",
@@ -144,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -177,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -343,10 +336,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fc1dcaa24c0>"
+       "<IPython.lib.display.IFrame at 0x7ff035278d30>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -387,10 +380,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fc1e0842eb0>"
+       "<IPython.lib.display.IFrame at 0x7ff0396b2580>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
