--- a/climateuncertaintyspilloverbook/climate.bib
+++ b/climateuncertaintyspilloverbook/climate.bib
@@ -1251,8 +1251,8 @@
 	year = {2015},
 	Bdsk-Url-1 = {http://gwagner.com/books/climate-shock}}
 
-@article{2012:Weitzman,
-	abstract = {A critical issue in climate change economics is the specifica- tion of the so-called ``damages function'' and its interaction with the unknown uncertainty of catastrophic outcomes. This paper asks how much we might be misled by our eco- nomic assessment of climate change when we employ a conventional quadratic damages function and/or a thin-tailed probability distribution for extreme temperatures. The paper gives some numerical examples of the indirect value of various greenhouse gas (GHG) concentration targets as insurance against catastrophic climate change temperatures and damages. These numerical exercises suggest that we might be underestimating considerably the welfare losses from uncertainty by using a quadratic damages function and/or a thin-tailed temperature distribution. In these examples, the primary reason for keeping GHG levels down is to insure against high-temperature catastrophic climate risks.},
+@article{Weitzman:2012,
+	abstract    = {A critical issue in climate change economics is the specifica- tion of the so-called ``damages function'' and its interaction with the unknown uncertainty of catastrophic outcomes. This paper asks how much we might be misled by our eco- nomic assessment of climate change when we employ a conventional quadratic damages function and/or a thin-tailed probability distribution for extreme temperatures. The paper gives some numerical examples of the indirect value of various greenhouse gas (GHG) concentration targets as insurance against catastrophic climate change temperatures and damages. These numerical exercises suggest that we might be underestimating considerably the welfare losses from uncertainty by using a quadratic damages function and/or a thin-tailed temperature distribution. In these examples, the primary reason for keeping GHG levels down is to insure against high-temperature catastrophic climate risks.},
 	author = {Weitzman, Martin L.},
 	date-added = {2020-02-22 15:05:07 -0600},
 	date-modified = {2020-02-22 15:05:07 -0600},
