--- a/climateuncertaintyspilloverbook/sec4_IllustrativeEconI.ipynb
+++ b/climateuncertaintyspilloverbook/sec4_IllustrativeEconI.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "$$\n",
     "d\\log K_t =  \\left[ \\mu_k (Z_t)    + \\left({\\frac {I_t}{K_t}} \\right)  -\n",
-    "{\\frac { \\kappa} 2} \\left( {\\frac {I_t} {K_t}} \\right)^2 \\right] dt -  {\\frac  {\\vert \\sigma_k(Z_t) \\vert^2}  2}dt+ \\sigma_k(Z_t) dW_t^k ,\n",
+    "{\\frac { \\kappa} 2} \\left( {\\frac {I_t} {K_t}} \\right)^2 \\right] dt -  {\\frac  {\\vert \\sigma_k(Z_t) \\vert^2}  2}dt+ \\sigma_k(Z_t) dW_t^k.\n",
     "$$\n",
     "\n",
     "The sum of consumption, $C_t$, and investment, $I_t$, are constrained to be proportional to capital:\n",
@@ -216,7 +216,7 @@
     "&+ {\\frac {(\\eta - 1)} \\delta}  \\left( \\left[ \\gamma_1 + \\gamma_2 y\\right]   \\sum_{\\ell=1}^L \\omega_\\ell \\theta_\\ell {\\tilde e} + {\\frac 1 2} \\gamma_2  |\\varsigma|^2 \\tilde e^2 \\right) \\cr\n",
     "&+ \\xi_a \\sum_{\\ell = 1}^L \\omega_\\ell \\left( \\log \\omega_\\ell - \\log \\pi_\\ell \\right)\\cr\n",
     "&+ \\mathcal J (y) \\sum_{m=1}^M g_m \\pi_m \\left[ \\phi_m(\\overline y) - \\phi(y) \\right]\n",
-    "+ \\xi_r {\\mathcal J}(y)  \\sum_{m=1}^M \\pi_m \\left( 1 - g_m + g_m \\log g_m \\right)\\pi_m \n",
+    "+ \\xi_r {\\mathcal J}(y)  \\sum_{m=1}^M \\pi_m \\left( 1 - g_m + g_m \\log g_m \\right)\\pi_m. \n",
     "\\end{align*}\n",
     "$$"
    ]
@@ -655,7 +655,7 @@
     "The figure shows $\\log SCC$ as a function of temperature anomaly:\n",
     "\n",
     "$$\n",
-    "\\log SCC = \\log C_0 - \\log N - \\log E + \\log \\eta - \\log (1 - \\eta)\n",
+    "\\log SCC = \\log C_0 - \\log N - \\log E + \\log \\eta - \\log (1 - \\eta).\n",
     "$$"
    ]
   },
