--- a/climateuncertaintyspilloverbook/sec6_IllustrativeEconIII.ipynb
+++ b/climateuncertaintyspilloverbook/sec6_IllustrativeEconIII.ipynb
@@ -13,17 +13,17 @@
     "For our setting, we alter the output equation from our previous specification as follows:\n",
     "\n",
     "$$\n",
-    "\\frac {I_t}{K_t} + \\frac {C_t} {K_t}  + \\frac {J_t} {K_t}  = \\alpha \n",
+    "\\frac {I_t}{K_t} + \\frac {C_t} {K_t}  + \\frac {J_t} {K_t}  = \\alpha,\n",
     "$$\n",
     "\n",
     "\n",
-    "where:\n",
+    "where\n",
     "\n",
     "$$\n",
     "\\begin{equation}\\label{(12)}\\tag{12}\n",
     " \\frac {J_t} {K_t} =   \\left\\{ \\begin{matrix}   \\alpha {\\vartheta_t}  \\left[ 1  -  \\left({\\frac {{\\mathcal E}_t} { \\alpha \\lambda_t K_t}}\\right)\\right]^\\theta & \\left({\\frac {{\\mathcal E}_t} {\\alpha  K_t}}\\right)  \\le \\lambda_t \\cr\n",
     "0 & \\left({\\frac {{\\mathcal E}_t} {\\alpha  K_t}}\\right)  \\ge \\lambda_t  \\end{matrix} \\right.\n",
-    "\\end{equation}\n",
+    "\\end{equation}.\n",
     "$$\n",
     "\n",
     "To motivate the term $J_t$, express the emissions to capital ratio as:\n",
@@ -61,7 +61,7 @@
     "1,t} \\cr\n",
     "\\theta & = \\theta_2 \\cr\n",
     "\\mu_t & = \\iota_t \n",
-    "\\end{align*}\n",
+    "\\end{align*}.\n",
     "$\n",
     "\n",
     "\n",
@@ -79,8 +79,8 @@
     "& + \\frac {\\partial  \\Phi^m(k,y)}{\\partial y}  \\sum_{\\ell=1}^L \\omega_\\ell  \\theta_\\ell {e} + {\\frac 1 2} \\frac {\\partial^2 \\Phi^m(k,y)}{\\partial y^2} |\\varsigma|^2 e^2  \\cr\n",
     "& + \\upsilon_d \\left( \\left[ \\gamma_1 + \\gamma_2 y + \\gamma_3^m (y - \\overline y) \\right]   \\sum_{\\ell=1}^L \\omega_\\ell \\theta_\\ell { e} + {\\frac 1 2} (\\gamma_2 + \n",
     "\\gamma_3^m) |\\varsigma|^2  e^2 \\right) \\cr\n",
-    "& + \\xi_a \\sum_{\\ell = 1}^L \\omega_\\ell \\left( \\log \\omega_\\ell - \\log \\pi_\\ell \\right) \n",
-    "\\end{align*} \n",
+    "& + \\xi_a \\sum_{\\ell = 1}^L \\omega_\\ell \\left( \\log \\omega_\\ell - \\log \\pi_\\ell \\right).\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "\n",
@@ -131,7 +131,7 @@
     "Given $\\Phi^m(k, y)$ for $m = 1, 2, \\dots, M$, solve $\\Phi(k, y)$ with extra elements to the HJB:\n",
     "\n",
     "$$\n",
-    "  \\xi_r \\mathcal{I}_g  \\sum \\pi_d^m (1 - g_m + g_m  \\log(g_m) ) + \\mathcal{I}_g\\sum g_m \\pi_d^m(\\Phi^{\\text{post tech, m}} - \\Phi^m )\n",
+    "  \\xi_r \\mathcal{I}_g  \\sum \\pi_d^m (1 - g_m + g_m  \\log(g_m) ) + \\mathcal{I}_g\\sum g_m \\pi_d^m(\\Phi^{\\text{post tech, m}} - \\Phi^m ).\n",
     "$$"
    ]
   },
