--- a/climateuncertaintyspilloverbook/appendix1.ipynb
+++ b/climateuncertaintyspilloverbook/appendix1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Appendix A:  Complete model\n",
+    "# Appendix A.  Complete model\n",
     "\n",
     "## A.1 Description\n",
     "Suppose the value function is $V$. State variable: $x = (\\log k, z, y, n)$  (realization of $\\log K, \\log N, Y, Z$), control variable : $(\\tilde e, i)$.\n",
