--- a/climateuncertaintyspilloverbook/appendix2.ipynb
+++ b/climateuncertaintyspilloverbook/appendix2.ipynb
@@ -88,23 +88,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# core loop in functions in `source/` can be described as follows\n",
-    "An initial guess: ϕ\n",
-    "Intial values of distorted probabibity of ω_ℓ: πc_o\n",
-    "constant step size: ϵ\n",
-    "tolerance level: tol\n",
-    "left hand error = 1 # random value larger than tol\n",
-    "report numbers of iteration: episode = 0\n",
-    "while left hand side error > tol:\n",
-    "    compute  dϕdy # first crder derivative\n",
-    "    compute dϕdyy # second order derivative\n",
-    "    compute e_tilde\n",
-    "    compute optimizing ω_ℓ: πc\n",
-    "    solve the ODE by conjugate gradient to get ϕ_new\n",
-    "    update left hand error\n",
-    "    compute right hand error\n",
-    "    ϕ = ϕ_new\n",
-    "    episode += 1"
+    "# # core loop in functions in `source/` can be described as follows\n",
+    "# An initial guess: ϕ\n",
+    "# Intial values of distorted probabibity of ω_ℓ: πc_o\n",
+    "# constant step size: ϵ\n",
+    "# tolerance level: tol\n",
+    "# left hand error = 1 # random value larger than tol\n",
+    "# report numbers of iteration: episode = 0\n",
+    "# while left hand side error > tol:\n",
+    "#     compute  dϕdy # first crder derivative\n",
+    "#     compute dϕdyy # second order derivative\n",
+    "#     compute e_tilde\n",
+    "#     compute optimizing ω_ℓ: πc\n",
+    "#     solve the ODE by conjugate gradient to get ϕ_new\n",
+    "#     update left hand error\n",
+    "#     compute right hand error\n",
+    "#     ϕ = ϕ_new\n",
+    "#     episode += 1"
    ]
   }
  ],
