--- a/climateuncertaintyspilloverbook/climate.bib
+++ b/climateuncertaintyspilloverbook/climate.bib
@@ -1410,6 +1410,19 @@
 	volume = {21},
 	year = {1969}}
 
+@inproceedings{CarletonGreenstone:2021,
+	abstract = {This paper outlines a two-step process to return the United States government’s Social Cost of Carbon (SCC) to the frontier of economics and climate science. The first step is to implement the original 2009-2010 Inter-agency Working Group (IWG) framework using a discount rate of 2%. This can be done immediately and will result in an SCC for 2020 of $125. The second step is to reconvene a new IWG tasked with comprehensively updating the SCC over the course of several months that would involve the integration of multiple recent advances in economics and science. We detail these advances here and provide recommendations on their integration into a new SCC estimation framework.},
+	author = {Carleton, Tamma and Greenstone, Michael},
+	booktitle = {SSRN},
+	date-added = {2021-08-25T23:43:47Z},
+	date-modified = {2021-08-25T23:43:47Z},
+	doi = {10.2139/ssrn.3764255},
+	issn = {1556-5068},
+	keywords = {G12,O44,Q51,Q54},
+	title = {{Updating the United States Government's Social Cost of Carbon}},
+	year = {2021},
+	Bdsk-Url-1 = {https://doi.org/10.2139/ssrn.3764255.}}
+
 @book{Ghil.Childress:1987,
 	address = {Berlin/Heidelberg},
 	author = {Ghil, Michael and Childress, Stephen},
