--- a/climateuncertaintyspilloverbook/sec4_IllustrativeEconIb.ipynb
+++ b/climateuncertaintyspilloverbook/sec4_IllustrativeEconIb.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "# Climate sensitivity\n",
     "θ_list = pd.read_csv('data/model144.csv', header=None).to_numpy()[:, 0] / 1000.\n",
-    "πc_o = np.ones_like(θ_list) / len(θ_list)\n",
+    "πa_o = np.ones_like(θ_list) / len(θ_list)\n",
     "\n",
     "# Damage functions\n",
     "σ_y = 1.2 * np.mean(θ_list)\n",
@@ -97,7 +97,7 @@
     "# for ξ_a_i in [0.02, 0.01, 0.005, 0.0025]:\n",
     "#     model_args_list = []\n",
     "#     for γ_3_m in γ_3:\n",
-    "#         model_arg = (η, δ, σ_y, y_bar, γ_1, γ_2, γ_3_m, θ_list, πc_o, ξ_r, ξ_a_i)\n",
+    "#         model_arg = (η, δ, σ_y, y_bar, γ_1, γ_2, γ_3_m, θ_list, πa_o, ξ_r, ξ_a_i)\n",
     "#         model_args_list.append((y_grid_long, model_arg, None, 1., 1e-8, 5_000, False))\n",
     "#     v_list[ξ_a_i], e_tilde_list[ξ_a_i] = solve_post_jump(y_grid_long, γ_3, solve_hjb_y, model_args_list)"
    ]
@@ -188,7 +188,7 @@
     "#         [temp[n_bar] * np.ones_like(y_grid_short) for temp in ϕ_list])\n",
     "\n",
     "#     # Compute ϕ with jump (impose boundary condition)\n",
-    "#     model_args = (η, δ, σ_y, y_underline, y_bar, γ_1, γ_2, γ_3, θ_list, πc_o, ϕ_i, πd_o,\n",
+    "#     model_args = (η, δ, σ_y, y_underline, y_bar, γ_1, γ_2, γ_3, θ_list, πa_o, ϕ_i, πd_o,\n",
     "#                   ξ_r, ξ_r, ξ_a_i)\n",
     "#     model_res = solve_hjb_y_jump(y_grid_short,\n",
     "#                                  model_args,\n",
