--- a/climateuncertaintyspilloverbook/sec4_IllustrativeEconIa.ipynb
+++ b/climateuncertaintyspilloverbook/sec4_IllustrativeEconIa.ipynb
@@ -128,7 +128,7 @@
     "\n",
     "# Climate sensitivity\n",
     "θ_list = pd.read_csv('data/model144.csv', header=None).to_numpy()[:, 0] / 1000.\n",
-    "πc_o = np.ones_like(θ_list) / len(θ_list)\n",
+    "πa_o = np.ones_like(θ_list) / len(θ_list)\n",
     "\n",
     "# Damage functions\n",
     "σ_y = 1.2 * np.mean(θ_list)\n",
@@ -165,7 +165,7 @@
     "# for ξ_r, ξ_a in [(100_000, 100_000), (5., 0.01), (1., 0.01), (0.3, 0.01)]:\n",
     "#     model_args_list = []\n",
     "#     for γ_3_m in γ_3:\n",
-    "#         model_arg = (η, δ, σ_y, y_bar, γ_1, γ_2, γ_3_m, θ_list, πc_o, ξ_r, ξ_a)\n",
+    "#         model_arg = (η, δ, σ_y, y_bar, γ_1, γ_2, γ_3_m, θ_list, πa_o, ξ_r, ξ_a)\n",
     "#         model_args_list.append((y_grid_long, model_arg, None, 1., 1e-8, 5_000, False))\n",
     "#     v_list[ξ_r], e_tilde_list[ξ_r] = solve_post_jump(y_grid_long, γ_3, solve_hjb_y, model_args_list)"
    ]
@@ -252,11 +252,11 @@
    "source": [
     "# pre_jump_res = {}\n",
     "# ξ_r_list = [100_000, 5., 1., 0.3]\n",
-    "# for ξ_r_i in ξ_r_list:\n",
+    "# for ξ_r_i in ξp_list:\n",
     "#     ϕ_list = v_list[ξ_r_i]\n",
     "#     certainty_equivalent = -ξ_r_i * np.log(\n",
     "#         np.average(\n",
-    "#             np.exp(-1. / ξ_r_i * np.array(ϕ_list)), axis=0, weights=πd_o))\n",
+    "#             np.exp(-1. / ξ_r_i * np.array(ϕ_list)), axis=0, weights=πa_o))\n",
     "#     # Change grid from 0-4 to 0-2\n",
     "#     ϕ_i = np.array(\n",
     "#         [temp[n_bar] * np.ones_like(y_grid_short) for temp in ϕ_list])\n",
@@ -266,7 +266,7 @@
     "#         ξ_a = 100_000\n",
     "#     else:\n",
     "#         ξ_a = 0.01\n",
-    "#     model_args = (η, δ, σ_y, y_underline, y_bar, γ_1, γ_2, γ_3, θ_list, πc_o, ϕ_i, πd_o,\n",
+    "#     model_args = (η, δ, σ_y, y_underline, y_bar, γ_1, γ_2, γ_3, θ_list, πd_o, ϕ_i, πa_o,\n",
     "#                   ξ_r_i, ξ_r_i, ξ_a)\n",
     "#     model_res = solve_hjb_y_jump(y_grid_short,\n",
     "#                                  model_args,\n",
@@ -528,11 +528,11 @@
     "# for ξ_r, ξ_a in [(100_000, 100_000), (5., 0.01), (1., 0.01), (0.3, 0.01)]:\n",
     "#     model_args_list = []\n",
     "#     for γ_3_m in γ_3:\n",
-    "#         model_arg = (η, δ, σ_y, y_bar_higher, γ_1, γ_2, γ_3_m, θ_list, πc_o,\n",
+    "#         model_arg = (η, δ, σ_y, y_bar_higher, γ_1, γ_2, γ_3_m, θ_list, πd_o,\n",
     "#                      ξ_r, ξ_a)\n",
     "#         model_args_list.append(\n",
     "#             (y_grid_long, model_arg, None, 1., 1e-8, 5_000, False))\n",
-    "#     v175_list[ξ_r], e175_tilde_list[ξ_r] = solve_post_jump(\n",
+    "#     v175_list[ξ_r], e175_tilde_list[ξp] = solve_post_jump(\n",
     "#         y_grid_long, γ_3, solve_hjb_y, model_args_list)\n",
     "\n",
     "# # pre jump value function"
@@ -563,7 +563,7 @@
     "#     ϕ_list = v175_list[ξ_r_i]\n",
     "#     certainty_equivalent = -ξ_r_i * np.log(\n",
     "#         np.average(\n",
-    "#             np.exp(-1. / ξ_r_i * np.array(ϕ_list)), axis=0, weights=πd_o))\n",
+    "#             np.exp(-1. / ξ_r_i * np.array(ϕ_list)), axis=0, weights=πa_o))\n",
     "#     # Change grid from 0-4 to 0-2\n",
     "#     ϕ_i = np.array(\n",
     "#         [temp[n_bar] * np.ones_like(y_grid_short_2) for temp in ϕ_list])\n",
@@ -574,7 +574,7 @@
     "#     else:\n",
     "#         ξ_a = 0.01\n",
     "#     model_args = (η, δ, σ_y, y_underline_higher, y_bar_higher, γ_1, γ_2, γ_3,\n",
-    "#                   θ_list, πc_o, ϕ_i, πd_o, ξ_r_i, ξ_r_i, ξ_a)\n",
+    "#                   θ_list, πd_o, ϕ_i, πa_o, ξ_r_i, ξ_r_i, ξ_a)\n",
     "#     model_res = solve_hjb_y_jump(y_grid_short_2,\n",
     "#                                  model_args,\n",
     "#                                  v0=None,\n",
@@ -791,13 +791,13 @@
     "y0 = 1.1\n",
     "temp_anol0 = 1.1\n",
     "y_underline = 1.5\n",
-    "y_overline = 2.\n",
+    "y_bar= 2.\n",
     "initial_state = EvolutionState(t=0,\n",
     "                               prob=1,\n",
     "                               damage_jump_state='pre',\n",
     "                               damage_jump_loc=None,\n",
     "                               variables=[e0, y0, temp_anol0],\n",
-    "                               y_underline=y_underline,\n",
+    "                               y_underline=y_bar,\n",
     "                               y_overline=y_overline)\n",
     "\n",
     "fun_args = (e_func_pre_damage, e_func_post_damage)\n",
