--- a/climateuncertaintyspilloverbook/sec4_IllustrativeEconIb.ipynb
+++ b/climateuncertaintyspilloverbook/sec4_IllustrativeEconIb.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4 Illustrative economy Ib: smooth ambiguity\n",
+    "# 4B Illustrative economy Ib: smooth ambiguity\n",
     "\n",
     "\n",
     "This notebook is to suppliment discussion in [Section 4](sec4_IllustrativeEconI.ipynb) by focusing on a different aspect -- impact of smooth ambiguity.\n",
@@ -13,7 +13,7 @@
     "\n",
     "Without specifically pointed out, $\\xi_r = 1$ in this example. And the smooth ambiguity parameter $\\xi_a$ values we experiment with are $\\{0.02, 0.01, 0.005, 0.0025\\}$.\n",
     "\n",
-    "### 4.1a.1 Post-jump continuation value functions\n",
+    "## 4B.1 Post-jump continuation value functions\n",
     "\n",
     "\n",
     "Conditioned on each of the damage functions, $m = 1, 2, \\dots, 20$. Solve for the corresponding $\\phi_m(y)$:\n",
@@ -118,7 +118,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.1.2 Pre-jump value function\n",
+    "## 4B Pre-jump value function\n",
     "\n",
     "The pre-jump value function has a similar structure with two exceptions:\n",
     "  -  we include the intensity function discussed earlier and \n",
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Emission and $\\log SCC$ as a function of temperature anomaly"
+    "## 4B.3 Emission and $\\log SCC$ as a function of temperature anomaly"
    ]
   },
   {
@@ -1157,7 +1157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Emission and logarithm of social cost of carbon trajectories\n",
+    "## 4B.4 Emission and logarithm of social cost of carbon trajectories\n",
     "\n",
     "The figure shows emission and $\\log SCC$ over time before temperature anomaly reaches the upper bound of jump threshold, 2$^o C$.\n"
    ]
