--- a/climateuncertaintyspilloverbook/appendix2_remark3p1.ipynb
+++ b/climateuncertaintyspilloverbook/appendix2_remark3p1.ipynb
@@ -5012,13 +5012,7 @@
       "Episode: 1729\t lhs error: 0.003602618664\t rhs error: 0.032651214750\n",
       "Episode: 1730\t lhs error: 0.003595895435\t rhs error: 0.032651214750\n",
       "Episode: 1731\t lhs error: 0.003589137209\t rhs error: 0.032651214750\n",
-      "Episode: 1732\t lhs error: 0.003582344052\t rhs error: 0.032651214750\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Episode: 1732\t lhs error: 0.003582344052\t rhs error: 0.032651214750\n",
       "Episode: 1733\t lhs error: 0.003575516031\t rhs error: 0.032651214750\n",
       "Episode: 1734\t lhs error: 0.003568653216\t rhs error: 0.032651214750\n",
       "Episode: 1735\t lhs error: 0.003561755679\t rhs error: 0.032651214750\n",
@@ -9001,6 +8995,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
