--- a/sec0_prep.ipynb
+++ b/sec0_prep.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,14 +87,17 @@
        "- Section 1: [Introduction](sec1_Introduction.ipynb)\n",
        "- Section 2: [Climate Dynamics](sec2_UncertainClimateDynamics.ipynb)\n",
        "- Section 3: [Uncertain Damage](sec3_UncertainDamage.ipynb)\n",
-       "- Section 4: [Illustrative Economy I: Uncertain Damages](sec4_IllustrativeEconI.ipynb)\n",
+       "- Section 4: [Illustrative Economy Ia: Uncertain Damages](sec4_IllustrativeEconIa.ipynb) and [Ib: Smooth Ambiguity](sec4_IllustrativeEconIb.ipynb)\n",
        "- Section 5: [Illustrative Economy II: Uncertainty Decomposition](sec5_IllustrativeEconII.ipynb)\n",
        "- Section 6: [Illustrative Economy III: Carbon abatement technology](sec6_IllustrativeEconIII.ipynb)\n",
-       "- Section 7: [Conclusion](sec7_Conclusion.ipynb)\n",
+       "- Section 7: [Illustrative Economy IV: exogenous emissions](sec7_IllustrativeEconIV.ipynb)\n",
+       "- Section 8: [Illustrqtive Economy V: tail-end damages](sec8_IllustrativeEconV.ipynb)\n",
+       "- Section 9: [Conclusion](sec9_Conclusion.ipynb)\n",
        "\n",
-       "As well as [appendices](appendices.ipynb):\n",
-       "- A. Complete model\n",
-       "- B. Computation methods\n"
+       "As well as appendices:\n",
+       "- [Appendix A.](appendix1.ipynb#A) Complete model\n",
+       "- [Appendix B.](appendix1.ipynb#B) Computation methods\n",
+       "- [Appendix C.](appendix2_remark3p1) 2-state model in remark 3.1\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -108,13 +111,27 @@
     "from IPython.display import Markdown, display\n",
     "display(Markdown(\"README.md\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dell38",
+   "display_name": "macro-ann",
    "language": "python",
-   "name": "dell38"
+   "name": "macro-ann"
   },
   "language_info": {
    "codemirror_mode": {
@@ -126,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
