--- a/appendix1.ipynb
+++ b/appendix1.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "192a96a2",
    "metadata": {},
    "source": [
     "# A.  Complete model\n",
@@ -151,6 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5f5acbdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
