--- a/appendix2_remark3p1.ipynb
+++ b/appendix2_remark3p1.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
+   "id": "c8490261",
    "metadata": {
     "code_folding": []
    },
@@ -32,6 +33,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27bae9bf",
    "metadata": {},
    "source": [
     "# Appendix C: when $Y$ has two states:\n",
@@ -117,6 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
+   "id": "3020b03d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
+   "id": "05f5250d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,6 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
+   "id": "dd6b10dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,6 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
+   "id": "876d0ac4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,6 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
+   "id": "dfb59387",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,6 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
+   "id": "1da47e37",
    "metadata": {},
    "outputs": [
     {
@@ -251,6 +259,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "09afc673",
    "metadata": {},
    "source": [
     "Compare the emission trajectories with the one state model:"
@@ -259,6 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
+   "id": "794a4a8d",
    "metadata": {},
    "outputs": [
     {
@@ -292,6 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
+   "id": "0e8c23f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,6 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
+   "id": "87cf4b6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,6 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
+   "id": "80d1d4f4",
    "metadata": {
     "scrolled": false
    },
@@ -352,6 +365,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0bb077ee",
    "metadata": {},
    "source": [
     "# Example 2: increasing $\\lambda$\n",
@@ -362,6 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
+   "id": "b84f6360",
    "metadata": {
     "scrolled": true
    },
@@ -8853,6 +8868,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
+   "id": "37e528f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8878,6 +8894,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
+   "id": "938bbdaf",
    "metadata": {},
    "outputs": [
     {
@@ -8911,6 +8928,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
+   "id": "0812e51b",
    "metadata": {},
    "outputs": [
     {
@@ -8944,6 +8962,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
+   "id": "2c4071af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8955,6 +8974,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
+   "id": "a7b61b12",
    "metadata": {},
    "outputs": [
     {
@@ -8981,7 +9001,6 @@
    ],
    "source": [
     "# scc λ = 1, 2, 5 and 1 state\n",
-    "\n",
     "plot_1S_vs_2S_SCC_multi_λ(et_1state, scc_list, scc_1, λ_list).write_html('plot_1S_vs_2S_SCC_multi_λ.html')\n",
     "IFrame(src ='plot_1S_vs_2S_SCC_multi_λ.html', width=1090, height=500)"
    ]
@@ -8992,9 +9011,9 @@
    "hash": "ce3d84cdb35e415f3961b099d6c4f2164b320cf4f1df6b83492eb67eb60916b5"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "macro-ann",
    "language": "python",
-   "name": "python3"
+   "name": "macro-ann"
   },
   "language_info": {
    "codemirror_mode": {
@@ -9006,7 +9025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.11"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
