--- a/climateuncertaintyspilloverbook/sec6_IllustrativeEconIII.ipynb
+++ b/climateuncertaintyspilloverbook/sec6_IllustrativeEconIII.ipynb
@@ -146,7 +146,6 @@
     "import matplotlib.pyplot as plt\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
-    "from IPython.display import IFrame\n",
     "arrival = 20\n",
     "γ_3 = np.linspace(0, 1./3, 20)\n",
     "πd_o = np.ones_like(γ_3) / len(γ_3)\n",
@@ -336,7 +335,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7ff035278d30>"
+       "<IPython.lib.display.IFrame at 0x7fa6f7b7b130>"
       ]
      },
      "execution_count": 5,
@@ -350,15 +349,14 @@
     "    tech_prob_first, distorted_tech_prob_first_7p5, distorted_tech_prob_first_5,distorted_tech_prob_first_2p5,\n",
     "    tech_prob_second, distorted_tech_prob_second_7p5, distorted_tech_prob_second_5, distorted_tech_prob_second_2p5,\n",
     "    dmg_prob, distorted_dmg_prob_7p5, distorted_dmg_prob_5, distorted_dmg_prob_2p5\n",
-    ").write_html('plot14.html')\n",
-    "IFrame(src ='plot14.html', width=700, height=500)\n"
+    ")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The simulation uses the planner's optimal solution. The left panel shows the distorted jump probabilities for the first technology jump.  The middle panel shows the distorted jump probabilities for the second technology jump. The right panel shows the distorted jump probabilities for the damage function curvature jump. The baseline probabilities for the right panel are computed using the state dependent intensities when we set $\\xi_a = \\xi_r = \\infty.$"
+    "The simulation uses the planner's optimal solution. The left panel shows the distorted jump probabilities for the first technology jump.  The middle panel shows the distorted jump probabilities for the second technology jump. The right panel shows the distorted jump probabilities for the damage function curvature jump. The baseline probabilities for the right panel are computed using the state-dependent intensities when we set $\\xi_a = \\xi_r = \\infty.$"
    ]
   },
   {
@@ -380,7 +378,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7ff0396b2580>"
+       "<IPython.lib.display.IFrame at 0x7fa6f7b7b850>"
       ]
      },
      "execution_count": 6,
@@ -390,8 +388,7 @@
    ],
    "source": [
     "from src.plots import plot15\n",
-    "plot15(θ, γ_3, distorted_damage_probs, πct).write_html('plot15.html')\n",
-    "IFrame(src ='plot15.html', width=700, height=500)"
+    "plot15(θ, γ_3, distorted_damage_probs, πct)"
    ]
   },
   {
@@ -400,6 +397,13 @@
    "source": [
     "Figure 15 reports the probability distortions for the damage function and climate sensitivity models. Here, we have imposed $\\xi_a = .02$ and $\\xi_r = 5.0$. Note that the damage function probability distortions are relatively modest, consistent with our previous discussion.   The climate model distortions, by design, are of similar magnitude as those reported previously in Figure 5."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
