--- a/climateuncertaintyspilloverbook/sec8_IllustrativeEconV.ipynb
+++ b/climateuncertaintyspilloverbook/sec8_IllustrativeEconV.ipynb
@@ -119,7 +119,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from IPython.display import IFrame\n",
     "from src.model import solve_hjb_y, solve_hjb_y_jump_old\n",
     "from src.utilities import find_nearest_value\n",
     "from src.simulation import simulate_jump_2\n",
@@ -263,8 +262,7 @@
     }
    ],
    "source": [
-    "plot_basic_ems(simulation_res_high, simulation_res_low, 299).write_html('plot_basic_ems_γ3_low.html')\n",
-    "IFrame(src ='plot_basic_ems_γ3_low.html', width=1090, height=500)"
+    "plot_basic_ems(simulation_res_high, simulation_res_low, 299)"
    ]
   },
   {
@@ -295,8 +293,7 @@
     }
    ],
    "source": [
-    "plot_basic_y(simulation_res_high, simulation_res_low, 299).write_html('plot_basic_y_γ3_low.html')\n",
-    "IFrame(src ='plot_basic_y_γ3_low.html', width=1090, height=500)"
+    "plot_basic_y(simulation_res_high, simulation_res_low, 299)"
    ]
   },
   {
@@ -328,8 +325,7 @@
    ],
    "source": [
     "plot_basic_DMG(simulation_res_high, simulation_res_low, 299,\n",
-    "               y_bar_high, y_bar_low, γ_1, γ_2, γ_3).write_html('plot_basic_DMG_γ3_low.html')\n",
-    "IFrame(src ='plot_basic_DMG_γ3_low.html', width=1090, height=500)"
+    "               y_bar_high, y_bar_low, γ_1, γ_2, γ_3)"
    ]
   },
   {
@@ -432,8 +428,7 @@
     }
    ],
    "source": [
-    "plot_basic_ems(simulation_res_high, simulation_res_low, 299).write_html('plot_basic_ems_γ3_high.html')\n",
-    "IFrame(src ='plot_basic_ems_γ3_high.html', width=1090, height=500)"
+    "plot_basic_ems(simulation_res_high, simulation_res_low, 299)"
    ]
   },
   {
@@ -464,8 +459,7 @@
     }
    ],
    "source": [
-    "plot_basic_y(simulation_res_high, simulation_res_low, 299).write_html('plot_basic_y_γ3_high.html')\n",
-    "IFrame(src ='plot_basic_y_γ3_high.html', width=1090, height=500)"
+    "plot_basic_y(simulation_res_high, simulation_res_low, 299)"
    ]
   },
   {
@@ -497,8 +491,7 @@
    ],
    "source": [
     "plot_basic_DMG(simulation_res_high, simulation_res_low, 299,\n",
-    "               y_bar_high, y_bar_low, γ_1, γ_2, γ_2p).write_html('plot_basic_DMG_γ3_high.html')\n",
-    "IFrame(src ='plot_basic_DMG_γ3_high.html', width=1090, height=500)"
+    "               y_bar_high, y_bar_low, γ_1, γ_2, γ_2p)"
    ]
   },
   {
