--- a/sec8_IllustrativeEconV.ipynb
+++ b/sec8_IllustrativeEconV.ipynb
@@ -200,7 +200,11 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [
     {
      "data": {
@@ -1909,7 +1913,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-input"
+    ]
+   },
    "outputs": [],
    "source": [
     "# Prepare ϕ conditional on low, high, extreme damage\n",
@@ -11994,6 +12002,10 @@
   }
  ],
  "metadata": {
+  "Tags": [
+   "hide-input"
+  ],
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "macro-ann",
    "language": "python",
@@ -12009,9 +12021,6 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "tags": [
-    "hide-input"
-   ],
    "version": "3.8.11"
   }
  },
